tests/errors/semantic/blocking/ADD_SET_INCOMPATIBLE_TYPES_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {1,2,3}
b = 5j
a.add(b)
